css/style.css
html, body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

body {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 100%;
  background-color: #CDDCDC;
  background-color: #CDDCDC;
  background-image: linear-gradient(to top, white 0%, #dfe9f3 100%);
}

h1 {
  font-size: 120%;
  margin: 0;
}

.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1 0 0;
  overflow: hidden;
}

.intro {
  line-height: 1.5;
  font-size: 120%;
  width: 90% !important;
  animation-name: fadeInDown;
  animation-duration: 1s;
}

.intro p {
  text-align: center;
}

.startgame {
  padding: .75rem;
  min-width: 200px;
  font-size: 110%;
}

nav.colors {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

nav.colors a {
  flex: 1 0 25%;
  height: 80px;
  transition: all .25s;
  transform: scale(1);
  visibility: visible;
}

nav.colors a[aria-disabled="true"] {
  transform: scale(0);
  visibility: hidden;
}

svg .color, .white {
  fill: white;
}

a.red {
  background-color: red;
}

.red .red {
  fill: red;
}

a.green {
  background-color: green;
}

.green .green {
  fill: green;
}

a.yellow {
  background-color: gold;
}

.yellow .yellow {
  fill: gold;
}

a.blue {
  background-color: blue;
}

.blue .blue {
  fill: blue;
}

a.black {
  background-color: black;
}

.black .black {
  fill: black;
}

a.purple {
  background-color: purple;
}

.purple .purple {
  fill: purple;
}

a.brown {
  background-color: brown;
}

.brown .brown {
  fill: brown;
}

a.pink {
  background-color: pink;
}

.pink .pink {
  fill: pink;
}

div.svg {
  width: 75%;
  margin-top: 75px;
  transition: transform .5s;
}

div.svg.new {
  transform: translateX(150%);
}

div.svg.done {
  transform: translateX(-150%);
}

div.svg.current {
  transform: translateX(0);
}

svg {
  width: 100%;
  max-height: 200px;
}

@media (min-width: 360px) {
  svg {
    max-height: 250px;
  }
}

[role="status"] {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  transform: translateY(-100%);
  transition: all .25s;
  color: #000;
  z-index: 2;
}

[role="status"] p {
  margin: 0;
}

[role="status"].status {
  background-color: lightskyblue;
  transform: translateY(0);
  transition: all .5s;
}

[role="status"].wrong {
  background-color: orange;
  transform: translateY(0);
  transition: all .5s;
}

[role="status"].correct {
  background-color: lightgreen;
  transform: translateY(0);
  transition: all .5s;
}

[role="status"].next ~ .wrapper nav, [role="status"].gameover ~ .wrapper nav {
  pointer-events: none;
}

button {
  border: 1px solid #000;
  color: #fff;
  background-color: black;
  border-radius: 5px;
  font-size: 16px;
  padding: .5rem;
  min-width: 100px;
}

button[aria-disabled="true"] {
  border: none;
  font-weight: bold;
  min-width: 0;
  background-color: transparent;
  color: #000;
}

@keyframes fadeInDown {
  0% {
    opacity: 0;
    transform: translateY(-80px) scale(.75);
  }

  100% {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

